tests/error/enum_defined2.gw
#! [contains] already been defined
int i;
enum
{
	first
} i;
